--- a/templates/edit_ticket.html
+++ b/templates/edit_ticket.html
@@ -481,7 +481,7 @@
             <input type="text" class="form-control part-unit-value" name="part_unit_value[]" required>
         </td>
         <td>
-            <input type="text" class="form-control part-total-value" name="part_total-value[]" readonly>
+            <input type="text" class="form-control part-total-value" name="part_total_value[]" readonly>
         </td>
         <td>
             <button type="button" class="btn btn-sm btn-danger remove-part">
